Advanced_Feature/3.4_TLSRoute_Passthrough/gw-tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: TLS
      port: 443

      tls:
        mode: Passthrough

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: TLSRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tls-passthrough-route
  namespace: web
spec:
  parentRefs:
    - name: tls-gw
      sectionName: bnk-listener

  hostnames:
    - coffee.f5bnk.com

  rules:
    - backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
